# momo_sdet_assignment

./: .gitignore  .pre-commit-config.yaml  README.md  config.ini  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.github/workflows/: backmerge.yml  ci.yml  release.yml
pages/: __init__.py  base_page.py  home_page.py  search_results_page.py
suites/: conftest.py
suites/SEARCH/: conftest.py  test_search.py
suites/common/: blocked_hosts.txt  network_blocklist.py
test/: README.md  test_cli.py  test_config.py  test_helpers.py  test_network_blocklist.py  test_perf.py  test_retry.py  test_runtime_config.py  test_suite_resolver.py
utils/: env_keys.py  logger.py  perf.py  reporting.py  retry.py  runtime_config.py  test_case_parser.py
